# Simple_Scripting_Language

./: CMakeLists.txt  README.md  main.cpp
Interpreter/: interpreter.cpp  interpreter.hpp
Lexer/: lexer.cpp  lexer.hpp
Parsing/: parser.cpp  parser.hpp
